tests/checker/bad/lib/BadADTLib3a.scilla
library BadADTLib3a

type TestType1 =
| Item3 of Int32
| Item4
